# arduino_esp32_motobox

./: .gitignore  Air780EG_Integration_Guide.md  AmazonQ.md  LICENSE  MqttManager_优化说明.md  SD卡问题解决指南.md  esp32-air780eg_status_fix.md  get_version.py  info_audio_mqtt_enhancement.md  monitor_serial.py  out  platformio.ini  readme.md  test_air780_lib.cpp  test_air780_lib_compile.py  test_audio.cpp  test_mqtt_debug.md  test_status_fix.md
docs/: Debug_Output_Optimization.md  GNSS_Functionality_Restoration.md  GNSS_Stack_Overflow_Fix.md  GNSS_URC_Control_Solution.md  GNSS_Usage_Example.md  GPS_DEBUG_GUIDE.md  air780eg_lbs_integration_complete.md  compass_example.cpp  compass_pin_fix.md  compass_refactor_summary.md  compass_usage.md  handleMQTTURC_transfer_summary.md  mqtt_callback_fix_final.md  mqtt_callback_fix_test.md  mqtt_optimization_summary.md  power_management_optimization.md  (+7 more)
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
lib/ui/fonts/: ui_font_Black_Ops_One.c  ui_font_Black_Ops_One_14.c  ui_font_Black_Ops_One_22.c
lib/ui/images/: ui_img_1142323638.c  ui_img_background_png.c  ui_img_bat_png.c  ui_img_bluetooth_1_png.c  ui_img_bluetooth_disconnect_png.c  ui_img_dir_img_30_png.c  ui_img_frame_1_png.c  ui_img_gps_png.c  ui_img_groupgyro_png.c  ui_img_guage_bg_png.c  ui_img_gyro_png.c  ui_img_gyrobackend_png.c  ui_img_h_png.c  ui_img_mengban_png.c  ui_img_speedcolor_png.c  ui_img_speednu_png.c  ui_img_weixing_disc_png.c  ui_img_weixing_ok_png.c  ui_img_wifi_1_png.c  ui_img_wifi_png.c  ui_img_wificon_png.c  ui_img_wifiok_png.c
lib/ui/screens/: ui_Screen1.c
(+163 files in other folders)
